--- a/VisitACity/Web/VisitACity.Web/wwwroot/css/themeCss.css
+++ b/VisitACity/Web/VisitACity.Web/wwwroot/css/themeCss.css
@@ -11034,7 +11034,7 @@ body, html {
 
 .bg {
     /* The image used */
-    background-image: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full page/img(20).jpg");
+    background-image: url("https://mdbootstrap.com/img/Photos/Others/img (40).jpg");
     /* Full height */
     height: 50%;
     /* Center and scale the image nicely */
