--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_AdminPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_AdminPartial.cshtml
@@ -11,7 +11,7 @@
     <li><a class="dropdown-item" asp-area="Administration" asp-controller="Cities" asp-action="Create">Create City</a></li>
     <li><a class="dropdown-item" asp-area="Administration" asp-controller="Countries" asp-action="Create">Create Country</a></li>
      <li><a class="dropdown-item" asp-area="Administration" asp-controller="Cities" asp-action="Delete">Delete City</a></li>
-    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Countries" asp-action="Delete">Dreate Country</a></li>
+    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Countries" asp-action="Delete">Delete Country</a></li>
   </ul>
 </div>
 }
