deployed image blobs

--- a/VisitTheCity/Web/VisitACity.Web/Areas/Administration/Views/Attractions/Edit.cshtml
+++ b/VisitTheCity/Web/VisitACity.Web/Areas/Administration/Views/Attractions/Edit.cshtml
@@ -23,9 +23,9 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="ImageUrl" class="form-label">ImageUrl</label>
-                <input asp-for="ImageUrl" class="form-control" aria-required="true" />
-                <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                <label asp-for="ImageToBlob" class="form-label">ImageToBlob</label>
+                <input type="file" asp-for="ImageToBlob" class="form-control" aria-required="true" />
+                <span asp-validation-for="ImageToBlob" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <label asp-for="Address" class="form-label">Address</label>
