--- a/VisitTheCity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
+++ b/VisitTheCity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@using VisitACity.Web.ViewModels.Attractions
 @model AttractionViewModel
 @{
+     var url = $"https://visitacity.blob.core.windows.net/images/{Model.Image.Id}.{Model.Image.Extension}";
     this.ViewData["Title"] = "Details ";
 }
 @if (this.TempData.ContainsKey("Message"))
@@ -11,7 +12,7 @@
     <div class="container px-5">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6 order-lg-2">
-                <div class="p-5"><img class="img-fluid rounded-circle" src="@Model.ImageUrl" alt="..."></div>
+                <div class="p-5"><img class="img-fluid rounded-circle" src=@url alt="..."></div>
             </div>
             @if (User.Identity.IsAuthenticated)
             {
