--- a/VisitACity/Web/VisitACity.Web/Views/Plan/_NoPlans.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plan/_NoPlans.cshtml
@@ -3,5 +3,5 @@
 }
 
 <div class="text-center">You have no plans yet. Create your first plan 
-       <a asp-controller="Plans" asp-action="Create">Here</a>
+       <a asp-controller="Plan" asp-action="Create">Here</a>
 </div>
