--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_AdminPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_AdminPartial.cshtml
@@ -6,12 +6,12 @@
   </a>
 
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Attractions" asp-action="Create">Create Attraction</a></li>
-    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Restaurants" asp-action="Create">Create Restaurant</a></li>
-    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Cities" asp-action="Create">Create City</a></li>
-    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Countries" asp-action="Create">Create Country</a></li>
-     <li><a class="dropdown-item" asp-area="Administration" asp-controller="Cities" asp-action="Delete">Delete City</a></li>
-    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Countries" asp-action="Delete">Delete Country</a></li>
+    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Attraction" asp-action="Create">Create Attraction</a></li>
+    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Restaurant" asp-action="Create">Create Restaurant</a></li>
+    <li><a class="dropdown-item" asp-area="Administration" asp-controller="City" asp-action="Create">Create City</a></li>
+    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Country" asp-action="Create">Create Country</a></li>
+     <li><a class="dropdown-item" asp-area="Administration" asp-controller="City" asp-action="Delete">Delete City</a></li>
+    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Country" asp-action="Delete">Delete Country</a></li>
   </ul>
 </div>
 }
