--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_Layout.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_Layout.cshtml
@@ -28,10 +28,10 @@
                     @if (this.User.Identity.IsAuthenticated)
                     {
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Plans" asp-action="Create">Create Plan</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Plan" asp-action="Create">Create Plan</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Plans" asp-action="MyPlans">My plans</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Plan" asp-action="MyPlans">My plans</a>
                         </li>
                     }
                 </ul>
