--- a/VisitACity/Web/VisitACity.Web/Views/Attraction/_AttractionCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attraction/_AttractionCard.cshtml
@@ -4,7 +4,7 @@
     var url = $"https://visitacity.blob.core.windows.net/images/{Model.Image.Id}.{Model.Image.Extension}";
 }
 <div class="media col-md-4">
-    <a asp-controller="Attractions" asp-action="Details" asp-route-id="@Model.Id">
+    <a asp-controller="Attraction" asp-action="Details" asp-route-id="@Model.Id">
         <img class="mr-3 img-responsive" width="400" height="300" src=@url alt="Card image cap" />
     </a>
     <div class="card-body">
@@ -22,11 +22,19 @@
     </div>
     <div class="card-footer">
         <div class="card-text feature-icon">
-            <i class="fa fa-eye"></i> <span>Revied by @Model.Reviews adventurers</span>
+            <i class="fa fa-eye"></i> 
+            @if (@Model.Reviews == 1)
+            {
+                <span>Revied by 1 adventurer</span>
+            }
+            else
+            {
+                    <span>Revied by @Model.Reviews adventurers</span>
+            }
         </div>
     </div>
     <div class="text-center">
-        <a class="btn btn-info" asp-controller="Attractions" asp-action="Details" asp-route-id="@Model.Id">
+        <a class="btn btn-info" asp-controller="Attraction" asp-action="Details" asp-route-id="@Model.Id">
             <div class="feature-icon">
                 <i class="fa fa-info-circle"></i> <span>Details</span>
             </div>
