--- a/VisitACity/Web/VisitACity.Web/Views/Plan/_PlanPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plan/_PlanPartial.cshtml
@@ -10,7 +10,7 @@
     <td>@Html.DisplayFor(x => x.ToDate)</td>
     <td>@Model.Days</td>
     <td>
-        <a class="btn btn-danger delete mb-2 fas fa-delete" data-id="@Model.Id" data-controller="Plans" data-action="Delete" data-body-message="Are you sure you want to delete this plan?" data-redirect-url="/Plans/MyPlans">
+        <a class="btn btn-danger delete mb-2 fas fa-delete" data-id="@Model.Id" data-controller="Plan" data-action="Delete" data-body-message="Are you sure you want to delete this plan?" data-redirect-url="/Plan/MyPlans">
             <i class="fas fa-trash"></i>
             Delete
         </a>
@@ -37,9 +37,9 @@
                             <div class="fw-bold">@attraction.Name</div>
                                 @attraction.Description
                             <br>
-                            Visit the attraction <a asp-action="Details" asp-controller="Attractions" asp-route-id="@attraction.Id">here</a>
+                            Visit the attraction <a asp-action="Details" asp-controller="Attraction" asp-route-id="@attraction.Id">here</a>
                         </div>
-                               <a class="btn btn-danger delete mb-2 fas fa-delete rounded-pill" data-id="@attraction.Id" data-controller="Plans" data-action="DeleteAttractionFromPlan" data-body-message="Are you sure you want to delete this attraction?">
+                               <a class="btn btn-danger delete mb-2 fas fa-delete rounded-pill" data-id="@attraction.Id" data-controller="Plan" data-action="DeleteAttractionFromPlan" data-body-message="Are you sure you want to delete this attraction?">
                                 <i class="fas fa-trash"></i>
                                 Delete
                                 </a>
@@ -65,9 +65,9 @@
                         <div class="ms-2 me-auto">
                             <div class="fw-bold"><i class="fa fa-utensils"></i> @restaurant.Name</div>
                             <br>
-                            Visit the restaurant <a asp-action="Details" asp-controller="Restaurants" asp-route-id="@restaurant.Id">here</a>
+                            Visit the restaurant <a asp-action="Details" asp-controller="Restaurant" asp-route-id="@restaurant.Id">here</a>
                         </div>
-                         <a class="btn btn-danger delete mb-2 fas fa-delete rounded-pill" data-id="@restaurant.Id" data-controller="Plans" data-action="DeleteRestaurantFromPlan" data-body-message="Are you sure you want to delete this restaurant?">
+                         <a class="btn btn-danger delete mb-2 fas fa-delete rounded-pill" data-id="@restaurant.Id" data-controller="Plan" data-action="DeleteRestaurantFromPlan" data-body-message="Are you sure you want to delete this restaurant?">
                                 <i class="fas fa-trash"></i>
                                 Delete
                                 </a>
