--- a/VisitACity/Web/VisitACity.Web/Views/Restaurant/Details.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Restaurant/Details.cshtml
@@ -31,20 +31,20 @@
 </div>
 
 <div class="text-center">
-    <a class="btn btn-warning" asp-controller="Reviews" asp-action="Create" asp-route-id="@Model.Id">
+    <a class="btn btn-warning" asp-controller="Review" asp-action="Create" asp-route-id="@Model.Id">
         <div class="feature-icon">
             <i class="fa fa-comment"></i> <span>Comment</span>
         </div>
     </a>
-    <a class="btn btn-success" asp-controller="Plans" asp-action="AddRestaurantToPlan" asp-route-restaurantId="@Model.Id">
+    <a class="btn btn-success" asp-controller="Plan" asp-action="AddRestaurantToPlan" asp-route-restaurantId="@Model.Id">
         <div class="feature-icon">
             <i class="fa fa-bus"></i> <span>Add to plan</span>
         </div>
     </a>
     @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
     {
-        <a class="btn btn-outline-dark" asp-area="Administration" asp-controller="Restaurants" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
-        <a class="btn btn-outline-danger delete" data-id="@Model.Id" data-area="Administration" data-controller="Restaurants" data-action="Delete" data-body-message="Are you sure you want to delete this attraction?" data-redirect-url="/Home/Index/1?cityName=@Model.CityName&radioOption=Restaurants">
+        <a class="btn btn-outline-dark" asp-area="Administration" asp-controller="Restaurant" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+        <a class="btn btn-outline-danger delete" data-id="@Model.Id" data-area="Administration" data-controller="Restaurant" data-action="Delete" data-body-message="Are you sure you want to delete this attraction?" data-redirect-url="/Home/Index/1?cityName=@Model.CityName&radioOption=Restaurants">
             Delete
         </a>
     }
@@ -57,7 +57,7 @@
 {
     <div class="text-center">
         No comments yet. Be the first to comment this restaurant
-        <a asp-controller="Reviews" asp-action="Create" asp-route-id="@Model.Id">Here</a>
+        <a asp-controller="Review" asp-action="Create" asp-route-id="@Model.Id">Here</a>
     </div>
     <br>
 }
@@ -65,7 +65,7 @@ else
 {
     @foreach (var review in Model.Reviews.OrderByDescending(x => x.CreatedOn))
     {
-        <partial name="~/Views/Reviews/_PartialReview.cshtml" , model="review" />
+        <partial name="~/Views/Review/_PartialReview.cshtml" , model="review" />
         <br>
     }
 }
