--- a/VisitACity/Web/VisitACity.Web/Views/Restaurant/_RestaurantCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Restaurant/_RestaurantCard.cshtml
@@ -5,7 +5,7 @@
 }*@
 
 <div class="media col-md-4">
-    <a asp-controller="Restaurants" asp-action="Details" asp-route-id="@Model.Id">
+    <a asp-controller="Restaurant" asp-action="Details" asp-route-id="@Model.Id">
         <img class="mr-3 img-responsive" width="400" height="300" src="@Model.ImageUrl" alt="Card image cap" />
     </a>
     <div class="card-body">
@@ -42,12 +42,12 @@
         </div>
     </div>
     <div class="text-center">
-        <a class="btn btn-info" asp-controller="Restaurants" asp-action="Details" asp-route-id="@Model.Id">
+        <a class="btn btn-info" asp-controller="Restaurant" asp-action="Details" asp-route-id="@Model.Id">
             <div class="feature-icon">
                 <i class="fa fa-info-circle"></i> <span>Details</span>
             </div>
         </a>
-        <a class="btn btn-success" asp-controller="Plans" asp-action="AddRestaurantToPlan" asp-route-restaurantId="@Model.Id">
+        <a class="btn btn-success" asp-controller="Plan" asp-action="AddRestaurantToPlan" asp-route-restaurantId="@Model.Id">
             <div class="feature-icon">
                 <i class="fa fa-bus"></i> <span>Add to plan</span>
             </div>
