--- a/VisitACity/Web/VisitACity.Web/Views/Review/_PartialReview.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Review/_PartialReview.cshtml
@@ -15,7 +15,7 @@
     <div class="card-body">
          @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
             {
-                <a class="btn btn-danger delete mb-2 fas fa-delete" data-id="@Model.Id" data-area="Administration" data-controller="Reviews" data-action="Delete" data-body-message="Are you sure you want to delete this comment?">
+                <a class="btn btn-danger delete mb-2 fas fa-delete" data-id="@Model.Id" data-area="Administration" data-controller="Review" data-action="Delete" data-body-message="Are you sure you want to delete this comment?">
                     <i class="fas fa-trash"></i>
                     Delete
                 </a>
