--- a/VisitACity/Web/VisitACity.Web/Views/Attraction/Details.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attraction/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using VisitACity.Web.ViewModels.Attractions
 @model AttractionViewModel
 @{
-     var url = $"https://visitacity.blob.core.windows.net/images/{Model.Image.Id}.{Model.Image.Extension}";
+     var url = $"https://visitacity.blob.core.windows.net/images/{Model.Image.Id}{Model.Image.Extension}";
     this.ViewData["Title"] = "Details ";
 }
 @if (this.TempData.ContainsKey("Message"))
